--- a/SAE2/Base.lproj/Main.storyboard
+++ b/SAE2/Base.lproj/Main.storyboard
@@ -29,14 +29,6 @@
                                             <buttonConfiguration key="configuration" style="gray" image="plus" catalog="system"/>
                                         </button>
                                     </barButtonItem>
-                                    <barButtonItem key="rightBarButtonItem" style="plain" id="aWK-BL-m54">
-                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="I35-1K-OQB">
-                                            <rect key="frame" x="276.33333333333331" y="5" width="100.66666666666669" height="34.333333333333336"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <state key="normal" title="Button"/>
-                                            <buttonConfiguration key="configuration" style="gray" image="magnifyingglass" catalog="system"/>
-                                        </button>
-                                    </barButtonItem>
                                 </navigationItem>
                             </items>
                         </navigationBar>
@@ -59,7 +51,23 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W6b-mR-TsW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-353" y="1230"/>
+            <point key="canvasLocation" x="-892" y="1230"/>
+        </scene>
+        <!--Historique-->
+        <scene sceneID="UYZ-o4-ZLV">
+            <objects>
+                <viewController id="gU3-1D-SDo" customClass="HistoriqueController" customModule="SAE2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tn8-4P-daL">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Vdt-Ph-HZN"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Historique" image="clock.arrow.trianglehead.counterclockwise.rotate.90" catalog="system" id="KJ4-p4-SfG"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XWu-cr-lnt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-73" y="1230"/>
         </scene>
         <!--Parametres-->
         <scene sceneID="dub-j5-mcl">
@@ -178,6 +186,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="Kcu-hY-UUR" kind="relationship" relationship="viewControllers" id="DG4-rh-00Z"/>
+                        <segue destination="gU3-1D-SDo" kind="relationship" relationship="viewControllers" id="XTG-EI-cqo"/>
                         <segue destination="p2T-64-MqM" kind="relationship" relationship="viewControllers" id="L56-zZ-jQw"/>
                         <segue destination="kp6-o1-nR6" kind="relationship" relationship="viewControllers" id="egw-Zi-0eB"/>
                     </connections>
@@ -225,9 +234,9 @@
     </scenes>
     <resources>
         <image name="chart.pie.fill" catalog="system" width="128" height="123"/>
+        <image name="clock.arrow.trianglehead.counterclockwise.rotate.90" catalog="system" width="128" height="119"/>
         <image name="eurosign" catalog="system" width="122" height="128"/>
         <image name="gearshape.fill" catalog="system" width="128" height="123"/>
-        <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="questionmark" catalog="system" width="94" height="128"/>
         <systemColor name="systemBackgroundColor">
